# ChangeLog for net-dns/libidn
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/ChangeLog,v 1.70 2007/09/22 19:10:16 philantrop Exp $

  22 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  libidn-0.6.9-r1.ebuild:
  Marked stable on amd64 as per bug 188420.

*libidn-0.6.9-r2 (16 Sep 2007)

  16 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  +libidn-0.6.9-r2.ebuild:
  fix support for GNU Emacs, see bug 187332

  15 Aug 2007; Jeroen Roovers <jer@gentoo.org> libidn-0.6.9-r1.ebuild:
  Stable for HPPA (bug #188420).

  14 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libidn-0.6.9-r1.ebuild:
  ppc stable, bug #188420

  14 Aug 2007; Markus Rothe <corsair@gentoo.org> libidn-0.6.9-r1.ebuild:
  Stable on ppc64; bug #188420

  14 Aug 2007; Raúl Porcel <armin76@gentoo.org> libidn-0.6.9-r1.ebuild:
  alpha/ia64/x86 stable wrt #188420

  13 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> libidn-1.0.ebuild:
  Improve the emacs removal code so it works with xemacs. Fixes bug #188587.

  13 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libidn-0.6.9-r1.ebuild:
  Stable on sparc wrt #188420

  11 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> -libidn-0.5.15.ebuild,
  -libidn-0.6.9.ebuild:
  Remove old ebuilds.

*libidn-1.0 (11 Aug 2007)

  11 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> +libidn-1.0.ebuild:
  Version bump to 1.0. They now use GPL-3 for the tools, examples etc and the
  library is still under LGPL-2.1.

  28 May 2007; Raúl Porcel <armin76@gentoo.org> libidn-0.6.5-r1.ebuild:
  alpha stable wrt #175845

  24 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> libidn-0.6.5-r1.ebuild:
  Stable on Mips, bug 175845.

*libidn-0.6.9-r1 (24 Apr 2007)

  24 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/0.6.9-javacflags.patch, +libidn-0.6.9-r1.ebuild:
  Works with virtual/jdk-1.4 again, doesn't install a versioned jar and
  installs javadocs using java-pkg_dojavadoc.
