@@ -1,8 +1,8 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/Attic/libidn-1.0.ebuild,v 1.2 2007/08/13 13:47:26 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/Attic/libidn-1.0-r1.ebuild,v 1.1 2007/12/05 09:17:25 ulm Exp $
 
-inherit java-pkg-opt-2 mono autotools
+inherit java-pkg-opt-2 mono autotools elisp-common
 
 DESCRIPTION="Internationalized Domain Names (IDN) implementation"
 HOMEPAGE="http://www.gnu.org/software/libidn/"
@@ -18,12 +18,14 @@ DEPEND="java? ( >=virtual/jdk-1.4
 				mono? ( >=dev-lang/mono-0.95 )
 		)"
 RDEPEND="java? ( >=virtual/jre-1.4 )
-		mono? ( >=dev-lang/mono-0.95 )"
+		mono? ( >=dev-lang/mono-0.95 )
+		emacs? ( virtual/emacs )"
 
 src_compile() {
 	local myconf=" --disable-csharp"
 
 	use mono && myconf="--enable-csharp=mono"
+	use emacs && myconf="${myconf} --with-lispdir=${SITELISP}/${PN}"
 
 	econf \
 		$(use_enable nls) \
@@ -35,28 +37,32 @@ src_compile() {
 }
 
 src_install() {
-	make install DESTDIR=${D} || die
+	make install DESTDIR="${D}" || die
 	dodoc AUTHORS ChangeLog FAQ NEWS README THANKS TODO || die
 
-	if ! use emacs; then
-		if [ -e "${D}/usr/share/emacs" ] ; then
-			rm -r "${D}/usr/share/emacs" || die
-		fi
-		if [ -e "${D}/usr/lib/xemacs" ] ; then
-			rm -r "${D}/usr/lib/xemacs" || die
-		fi
-	fi
+	use emacs || rm -rf "${D}/usr/share/emacs"
+	#use xemacs || rm -rf "${D}/usr/lib/xemacs"
 
 	if use doc; then
 		dohtml -r doc/reference/html/* || die
 	fi
 
 	if use java; then
-		java-pkg_newjar ${D}/usr/share/java/${P}.jar || die
-		rm -rf ${D}/usr/share/java || die
+		java-pkg_newjar "${D}"/usr/share/java/${P}.jar || die
+		rm -rf "${D}"/usr/share/java || die
 
 		if use doc; then
 			java-pkg_dojavadoc doc/java
 		fi
+	fi
+}
+
+pkg_postinst() {
+	if use emacs; then
+		elog "activate Emacs support by adding the following lines"
+		elog "to your ~/.emacs file:"
+		elog "   (add-to-list 'load-path \"${SITELISP}/${PN}\")"
+		elog "   (load idna)"
+		elog "   (load punycode)"
 	fi
 }
