@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/libidn
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/ChangeLog,v 1.70 2007/09/22 19:10:16 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/ChangeLog,v 1.71 2007/12/05 09:17:25 ulm Exp $
+
+*libidn-1.0-r1 (05 Dec 2007)
+
+  05 Dec 2007; Ulrich Mueller <ulm@gentoo.org> libidn-0.6.9-r2.ebuild,
+  -libidn-1.0.ebuild, +libidn-1.0-r1.ebuild:
+  Fix Emacs support also for version 1.0, bug #187332.
 
   22 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
   libidn-0.6.9-r1.ebuild:
